--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                         <select id="entregador" name="entregador">
                             <option value="Alex">Alex</option>
                             <option value="Adílio">Adílio</option>
-                            <option value="Carol">Carla</option>
+                            <option value="Carla">Carla</option>
                             <option value="Carol">Carol</option>
                             <option value="Débora">Débora</option>
                             <option value="Érica">Érica</option>
