--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
                         <option value="Dinheiro Trocado">Dinheiro Trocado</option>
                         <option value="Pix">PIX</option>
                         <option value="Cartão">Cartão</option>
+                        <option value="Crediário">Crediário</option>
                         </select>
                     </form>
                     <div style="display: none;" class="caixa_text" id="caixaQtd">
