--- a/index.html
+++ b/index.html
@@ -253,6 +253,10 @@
     <div class="Print" id="print">
         <div class="recibo">
                 <!-- Exibição dos detalhes do recibo -->
+                <div class="NumeroPedido">
+                    <p>Nº Pedido: <span id="NPedido">95</span></p>
+                    
+                </div>
                 <img id="logo2" src="./img/Drog-Recuperado-black.png" alt="code2">
                 <p id="WhatsApp">
                     <img style="width: 13px; transform: translateY(3px);" src="./img/Whats.png"> (61) 3715 - 0201
