--- a/index.html
+++ b/index.html
@@ -207,6 +207,10 @@
                 <div class="container02">
                     <!-- Caixa de texto para endereço -->
                     <div class="caixa_text">
+                        <input type="text" id="bairro" placeholder="Bairro" />
+                    </div>
+                    <!-- Caixa de texto para endereço -->
+                    <div class="caixa_text">
                         <textarea type="text" id="endereco" placeholder="Endereço"></textarea>
                     </div>
                     <!-- Formulário para geração de QR Code -->
