--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
                             <option value="Ivan">Ivan</option>
                             <option value="Rivaldo">Rivaldo</option>
                             <option value="Mário">Mário</option>
+                            <option value="Stella">Stella</option>
 
                         </select>
                     </div>
