--- a/index.html
+++ b/index.html
@@ -181,6 +181,10 @@
                     <div class="caixa_text">
                         <input type="text" placeholder="Cliente" id="cliente" name="cliente" />
                     </div>
+                     <!-- Input para o telefone do cliente -->
+                     <div class="caixa_text">
+                        <input type="text" placeholder="Telefone" id="telefone" name="telefone" />
+                    </div>
                     <!-- Formulário para seleção do método de pagamento -->
                     <form>
                         <label style="color: white;" for="opcoes-pagamento">Pagamento:</label>
@@ -270,6 +274,7 @@
                     ---- <Strong>Planaltina - GO</Strong>
                 </p>
                 <h1>Cliente - <span id="recibo_cliente"></span><p id="frase"></p></h1>
+                <p id="reciboCelular">Nº Celular: <span id="recibo_celular"></span></p>
                 <p><strong>Forma de Pagamento: </strong><span id="recibo_pagamento"></span></p>
                 <p id="troco_result"><strong>Troco para: </strong><span id="recibo_troco"></span></p>
                 <p><strong>Qtd: </strong><span id="recibo_qtd">1</span></p>
