--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                                     <option value="Adílio">Adílio</option>
                                     <option value="Carla">Carla</option>
                                     <option value="Carol">Carol</option>
-                                    <option value="Débora">Carlos</option>
+                                    <option value="Carlos">Carlos</option>
                                     <option value="Érica">Érica</option>
                                     <option value="Gilson">Gilson</option>
                                     <option value="Gislaine">Gislaine</option>
